# rust_from_java_and_cpp

ch03/allocate_and_deallocate_rust/: Cargo.toml  diff_output.txt
ch03/allocate_and_deallocate_rust/src/: main.rs
ch03/auto_drop_memory_release_rust/: Cargo.toml
ch03/auto_drop_memory_release_rust/src/: main.rs
ch03/double_free_risks_cpp/: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
ch03/double_free_risks_cpp/cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
ch03/double_free_risks_cpp/source/: lib.cpp  main.cpp
ch03/double_free_risks_cpp/test/: CMakeLists.txt
ch03/double_free_risks_cpp/test/source/: double_free_risks_cpp_test.cpp
ch03/garbage_collection_alternatives_rust/: Cargo.toml
ch03/garbage_collection_alternatives_rust/src/: main.rs
ch03/garbage_collection_example_java/: .gitignore  settings.gradle.kts
ch03/garbage_collection_example_java/app/: build.gradle.kts
ch03/garbage_collection_example_java/app/src/main/java/garbage_collection_example_java/: App.java
ch03/garbage_collection_example_java/app/src/test/java/garbage_collection_example_java/: AppTest.java
ch03/ownership_scope_lifetime_for_variables_and_values_rust/: Cargo.toml
ch03/ownership_scope_lifetime_for_variables_and_values_rust/src/: main.rs
ch03/ownership_story_cpp/: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
ch03/ownership_story_cpp/cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
ch03/ownership_story_cpp/source/: lib.cpp  main.cpp
ch03/ownership_story_cpp/test/: CMakeLists.txt
ch03/ownership_story_cpp/test/source/: ownership_story_cpp_test.cpp
ch03/ownership_story_rust/: Cargo.toml
ch03/ownership_story_rust/src/: main.rs
